ONM-5865: Improve fix navbar-filters css bug on safari

--- a/public/assets/src/opennemas-webarch/less/components/_navbar-filters.less
+++ b/public/assets/src/opennemas-webarch/less/components/_navbar-filters.less
@@ -11,8 +11,7 @@
   }
 
   .input-group {
-    max-width: 0;
-    max-width: -webkit-fit-content;
+    max-width: unset;
 
     input,
     input:focus,
@@ -25,7 +24,7 @@
     .input-group-addon {
       border-color: transparent;
       background-color: transparent;
-      width: -webkit-fit-content;
+      width: auto;
 
       .fa {
         vertical-align: 0;
